# lead-oxide

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: constants.rs  errors.rs  fetcher.rs  lib.rs  opts.rs  proxy.rs  types.rs
src/test_data/: response.json
tests/samples/: response.json
