[package]
name = "lead-oxide"
version = "0.2.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"
description = "WIP API wrapper for pubproxy.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LovecraftianHorror/lead-oxide"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
iso_country = { version = "0.1.4", features = ["serde"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
thiserror = "1.0"
ureq = { version = "1.3", default-features = false }

[dev-dependencies]
serial_test = "0.5"
